samples/SalesforceFoundation/Cumulus/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Acknowledgment_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Acknowledgment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this gift.</description>
        <inlineHelpText>Status of Acknowledgment of this gift.</inlineHelpText>
        <label>Acknowledgment Status</label>
        <picklist>
            <picklistValues>
                <fullName>To Be Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Acknowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Acknowledgment Now</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Acknowledgment Not Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ask_Date__c</fullName>
        <description>The date when the donor was specifically asked for the donation, as opposed to the Opportunity Close Date that the organization may set to either when the Opportunity was first created, or when the Opportunity was won.</description>
        <inlineHelpText>The date when the donor was specifically asked for the donation, as opposed to the Opportunity Close Date that the organization may set to either when the Opportunity was first created, or when the Opportunity was won.</inlineHelpText>
        <label>Ask Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>Batch__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>Notes on why the donation ask was not successful.</description>
        <inlineHelpText>Notes on why the donation ask was not successful.</inlineHelpText>
        <label>Closed Lost Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fair_Market_Value__c</fullName>
        <description>The Fair Market Value of an In-Kind gift.</description>
        <inlineHelpText>The Fair Market Value of an In-Kind gift.</inlineHelpText>
        <label>Fair Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gift_Strategy__c</fullName>
        <description>Categorizes the type of ask for this opportunity.</description>
        <inlineHelpText>Categorizes the type of ask for this opportunity.</inlineHelpText>
        <label>Gift Strategy</label>
        <picklist>
            <picklistValues>
                <fullName>New Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Contract_Date__c</fullName>
        <description>The date of the grant&apos;s inception, according to the document or contract sent by the grant-making organization.</description>
        <inlineHelpText>The date of the grant&apos;s inception, according to the document or contract sent by the grant-making organization.</inlineHelpText>
        <label>Grant Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Contract_Number__c</fullName>
        <description>Tracks unique numbers sometimes assigned by grant-making organizations.</description>
        <inlineHelpText>Tracks unique numbers sometimes assigned by grant-making organizations.</inlineHelpText>
        <label>Grant Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Period_End_Date__c</fullName>
        <description>The date on which the period of the grant ends.</description>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Period_Start_Date__c</fullName>
        <description>The date on which the period of the grant begins.</description>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Program_Area_s__c</fullName>
        <description>Describes the funding areas for the grant/gift. You can enter anything you want here. For example, you could enter the name of the program the grant/gift applies to.</description>
        <inlineHelpText>Describes the funding areas for the grant/gift. You can enter anything you want here. For example, you could enter the name of the program the grant/gift applies to.</inlineHelpText>
        <label>Program Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Grant_Requirements_Website__c</fullName>
        <description>A URL that points to the grant requirements on the grant-maker&apos;s website.</description>
        <inlineHelpText>A URL that points to the grant requirements on the grant-maker&apos;s website.</inlineHelpText>
        <label>Grant Requirements Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Honoree_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The existing Contact record of the honoree for this donation.</description>
        <inlineHelpText>The existing Contact record of the honoree for this donation.</inlineHelpText>
        <label>Honoree Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Honoree Contact)</relationshipLabel>
        <relationshipName>Honoree_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Honoree_Name__c</fullName>
        <description>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, Salesforce automatically populates this field with that value.</description>
        <inlineHelpText>The honoree name as provided by the donor. If this field is left blank, and the Honoree Contact field contains a value, Salesforce automatically populates this field with that value.</inlineHelpText>
        <label>Honoree Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Kind_Description__c</fullName>
        <description>Holds any rich text description of the In-Kind Gift, including pictures.</description>
        <inlineHelpText>Holds any rich text description of the In-Kind Gift, including pictures.</inlineHelpText>
        <label>In-Kind Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>In_Kind_Donor_Declared_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the donor provided the Fair Market Value for this In-Kind gift.</description>
        <inlineHelpText>Checked if the donor provided the Fair Market Value for this In-Kind gift.</inlineHelpText>
        <label>In-Kind Donor Declared Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Kind_Type__c</fullName>
        <description>The type of In-Kind gift.</description>
        <inlineHelpText>The type of In-Kind gift.</inlineHelpText>
        <label>In-Kind Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Grant_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, indicates that the grant is a renewal of a previous grant.</description>
        <inlineHelpText>If selected, indicates that the grant is a renewal of a previous grant.</inlineHelpText>
        <label>Is Grant Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account of the company who will match this gift.</description>
        <inlineHelpText>The account of the company who will match this gift.</inlineHelpText>
        <label>Matching Gift Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Employer__c</fullName>
        <description>The name of the company who will match this gift.</description>
        <inlineHelpText>The name of the company who will match this gift.</inlineHelpText>
        <label>Matching Gift Employer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Status__c</fullName>
        <description>The status of this gift being matched.</description>
        <inlineHelpText>The status of this gift being matched.</inlineHelpText>
        <label>Matching Gift Status</label>
        <picklist>
            <picklistValues>
                <fullName>Potential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Gift__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The employer&apos;s matching gift for this employee&apos;s gift.</description>
        <inlineHelpText>The employer&apos;s matching gift for this employee&apos;s gift.</inlineHelpText>
        <label>Matching Gift</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Matched Gifts</relationshipLabel>
        <relationshipName>MatchedGifts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Grant_Deadline_Due_Date__c</fullName>
        <description>The NPSP updates this field automatically based on the next Deliverable record.</description>
        <inlineHelpText>The NPSP updates this field automatically based on the next Deliverable record.</inlineHelpText>
        <label>Next Deliverable Date</label>
        <summarizedField>Grant_Deadline__c.Grant_Deadline_Due_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Grant_Deadline__c.Grant_Deadline_Due_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Grant_Deadline__c.Grant_Deliverable_Close_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Grant_Deadline__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Notification_Message__c</fullName>
        <description>A personalized message for the notification recipient.</description>
        <inlineHelpText>A personalized message for the notification recipient.</inlineHelpText>
        <label>Notification Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Preference__c</fullName>
        <description>How the notification recipient should be notified.</description>
        <inlineHelpText>How the notification recipient should be notified.</inlineHelpText>
        <label>Notification Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postal Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Notify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The existing Contact record of the person to be notified for this donation.</description>
        <inlineHelpText>The existing Contact record of the person to be notified for this donation.</inlineHelpText>
        <label>Notification Recipient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Notification Recipient)</relationshipLabel>
        <relationshipName>Notification_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Information__c</fullName>
        <description>The contact information (as provided by the donor) for the notification recipient.</description>
        <inlineHelpText>The contact information (as provided by the donor) for the notification recipient.</inlineHelpText>
        <label>Notification Recipient Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notification_Recipient_Name__c</fullName>
        <description>The name (as provided by the donor) of the person who should be notified about this gift. If this field is left blank and the Notification Recipient Contact field contains a value, Salesforce automatically populates this field with that value.</description>
        <inlineHelpText>The name (as provided by the donor) of the person who should be notified about this gift. If this field is left blank and the Notification Recipient Contact field contains a value, Salesforce automatically populates this field with that value.</inlineHelpText>
        <label>Notification Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Grant_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this grant/gift is a renewal of a previous grant/gift, use this field to relate this record to the previous one.</description>
        <inlineHelpText>If this grant/gift is a renewal of a previous grant/gift, use this field to relate this record to the previous one.</inlineHelpText>
        <label>Previous Grant/Gift Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Grants/Gifts</relationshipLabel>
        <relationshipName>Previous_Grant_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Campaign_Member_Status__c</fullName>
        <description>The status to use when creating a campaign member for this opportunity&apos;s primary contact and primary campaign source. Leave blank to default to an responded status for closed/won opportunities, and a non-responded status for other opportunities.</description>
        <inlineHelpText>The status to use when creating a campaign member for this opportunity&apos;s primary contact and primary campaign source. Leave blank to default to an responded status for closed/won opportunities, and a non-responded status for other opportunities.</inlineHelpText>
        <label>Primary Contact Campaign Member Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for this opportunity. The primary contact role is kept in sync with this field. For individual donations, this denotes attribution for this opportunity.</description>
        <inlineHelpText>The primary contact for this opportunity. The primary contact role is kept in sync with this field. For individual donations, this denotes attribution for this opportunity.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <description>The date this donor was identified as qualifying for this donation.</description>
        <inlineHelpText>The date this donor was identified as qualifying for this donation.</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Installment_Name__c</fullName>
        <description>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</description>
        <formula>IF(
ISBLANK(npe03__Recurring_Donation__c),
&apos;&apos;,
  IF(
    OR(ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Open&apos;),ISPICKVAL(npe03__Recurring_Donation__r.npe03__Open_Ended_Status__c, &apos;Closed&apos;),ISBLANK(npe03__Recurring_Donation__r.npe03__Installments__c)),
    &apos;(&apos;&amp;TEXT(Recurring_Donation_Installment_Number__c)&amp;&apos;)&apos;,
    &apos;(&apos;&amp;TEXT(Recurring_Donation_Installment_Number__c)&amp;&apos; &apos;&amp;$Label.oppInstallmentsOf&amp;&apos; &apos;&amp;TEXT(npe03__Recurring_Donation__r.npe03__Installments__c)&amp;&apos;)&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Installment name for inclusion in Opportunity Naming. Shows the installment number in parenthesis for open ended recurring donations, or the installment number out of the total for recurring donations with a set number of installments.</inlineHelpText>
        <label>Recurring Donation Installment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurring_Donation_Installment_Number__c</fullName>
        <description>The installment number of this opportunity&apos;s recurring donation schedule.</description>
        <inlineHelpText>The installment number of this opportunity&apos;s recurring donation schedule.</inlineHelpText>
        <label>Recurring Donation Installment Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <description>The amount you are requesting. This number might be different from the final award amount.</description>
        <inlineHelpText>The amount you are requesting. This number might be different from the final award amount.</inlineHelpText>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tribute_Type__c</fullName>
        <description>Indicates whether the gift is in honor or memory of an individual.</description>
        <inlineHelpText>Indicates whether the gift is in honor or memory of an individual.</inlineHelpText>
        <label>Tribute Type</label>
        <picklist>
            <picklistValues>
                <fullName>Honor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Memorial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>To_Be_Acknowledged</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>Primary_Contact__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Acknowledgment_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acknowledgment_Status__c</field>
            <operation>equals</operation>
            <value>To Be Acknowledged,Email Acknowledgment Not Sent</value>
        </filters>
        <label>To Be Acknowledged</label>
        <language>en_US</language>
    </listViews>
</CustomObject>